--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -1,18 +1,20 @@
 <div class="ProductCards row">
   <div *ngFor="let ProductCard of ProductCards" class="ProductCard col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <div class="ProductCard-imageBlock">
-      <img src={{ProductCard.imageUrl}}>
+      <img src={{ProductCard.imageUrl}} class="Product-Image">
     </div>
     <div class="ProductCard-infoBlock">
-      {{ProductCard.description}}
+      <div class="Product-Title">
+        {{ProductCard.title}}
+        </div>
+        <div class="Product-Description">
+        {{ProductCard.description}}
+      </div>
+
     </div>
     <div class="ProductCard-buttonsBlock row">
-      <div class="ProductCard-editButton col-xs-6">
-        <button class="EditButton">Edit</button>
-      </div>
-      <div class="ProductCard-deleteButton col-xs-6">
-        <button class="DeleteButton">Delete</button>
-      </div>
+        <button class="EditButton col-xs-6">Edit</button>
+        <button class="DeleteButton col-xs-6">Delete</button>
     </div>
   </div>
 </div>
