--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./app/css/bootstrap.css";
 
-
+// .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto, .row
+// {
+//     padding: 0;
+//     margin: 0;
+// }
 
 .ProductCard
 {
     position: relative;
     border: 1px solid #e7e8e9;
-    padding: 10px 10px 0;
     color: #404040;
     outline: none;
-   
+   margin: 1rem;
 }
 
 
+
+.ProductCard-imageBlock
+{
+    height: 10rem;
+    padding: 0.1rem;
+    
+}
+.Product-Image
+{
+    margin: 0.2rem;
+    width: auto;
+    height: auto;
+    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+    max-height: 9rem;
+}
+
+.Product-Title
+{
+    font-size: 1rem;
+}
+
+.Product-Description
+{
+    font-size: 0.7rem;
+}
+
+.row
+{
+    margin: 0.5rem 0rem 0rem 0rem;
+}
+
+.EditButton,.DeleteButton
+{
+    width: 50%;
+}
+
+.ProductCard-buttonsBlock
+{
+    bottom: 0rem;
+}
