Delete Call Working Successfully

--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -13,8 +13,8 @@
 
     </div>
     <div class="ProductCard-buttonsBlock row">
-        <button class="EditButton col-xs-6">Edit</button>
-        <button class="DeleteButton col-xs-6">Delete</button>
+        <button class="EditButton col-xs-6" (click)=editProductCard(ProductCard)>Edit</button>
+        <button class="DeleteButton col-xs-6" (click)=deleteProductCard(ProductCard)>Delete</button>
     </div>
   </div>
 </div>
