--- a/src/app/sign-in-popup/sign-in-popup.component.html
+++ b/src/app/sign-in-popup/sign-in-popup.component.html
@@ -22,7 +22,7 @@
   <div id="modalpopup">
     <div class="modal-header">
       <h1 class="signIn_heading modal-title">Sign In</h1>
-      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -33,13 +33,13 @@
       <form action="#">
         <div class="form-group">
           <label for="email"><b>Email Address</b></label>
-          <input type="email" class="form-control col-md-12 col-lg-12" id="email" placeholder="Enter email" name="email">
+          <input #userID type="text" class="form-control col-md-12 col-lg-12" id="userID" placeholder="Enter UserID" name="userID">
         </div>
         <div class="form-group">
           <label for="pwd"><b>Password</b></label>
-          <input type="password" class="form-control col-md-12 col-lg-12" id="pwd" placeholder="Enter password" name="pwd">
+          <input #password type="password" class="form-control col-md-12 col-lg-12" id="pwd" placeholder="Enter password" name="pwd">
         </div>
-        <button type="submit" class="btn btn-primary">Sign In</button>
+        <button type="submit" class="btn btn-primary" (click)="auth(userID.value, password.value);">Sign In</button>
       </form>
     </div>
   </div>
