--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,8 @@
 .addProductButton
 {
     font-size: 10rem;
-    width: 10rem;
+    width: 14rem;
     max-width: unset;
     text-align: center;
+    height: 17rem;
 }
