search store functionality

--- a/src/app/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/header-sub-menu/header-sub-menu.component.css
@@ -58,6 +58,9 @@ svg {
 }
 .ng-invalid  { border: 1px solid red; } 
 
+.modal-dialog{
+    max-width: 560px;
+}
 
 @media only screen and (max-width: 768px) {
     .StoreHeader-desktop {
