--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,5 @@
 
 
 <app-header></app-header>
-<app-header-sub-menu></app-header-sub-menu>
-<app-sign-in-popup></app-sign-in-popup>
-<app-page-carousel></app-page-carousel>
-<app-my-component-one></app-my-component-one>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
+<app-footer></app-footer> 
