create account post service works!!

--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -1,73 +1,67 @@
-
-
-
 <div class="panel panel-primary col-lg-8 col-md-8" style="padding:0%">
   <div class="panel-heading">
     <h3 class="panel-title">Create an Account</h3>
   </div>
   <div class="panel-body">
     <form class="form-horizontal">
-
+ 
       <div class="form-group" style="text-align:left">
         
-          <label for="firstName" class="col-sm-3 control-label">First Name</label>
+          <label for="firstName" class="col-sm-3 control-label">Email</label>
         
         <div class="col-sm-9">
-          <input type="text" id="firstName" placeholder="First Name" class="form-control" autofocus>
+          <input #email type="text" id="email" placeholder="Email" class="form-control" autofocus>
         </div>
       </div>
       
       <div class="form-group">
         
-        <label for="firstName" class="col-sm-3 control-label">Last Name</label>
+        <label for="firstName" class="col-sm-3 control-label">Name</label>
         
         <div class="col-sm-9">
-          <input type="text" id="firstName" placeholder="Last Name" class="form-control" autofocus>
+          <input #name type="text" id="name" placeholder="name" class="form-control" autofocus>
         </div>
       </div>
-
-      <div class="form-group">
+ 
+      <!--<div class="form-group">
         
         <label for="firstName" class="col-sm-3 control-label">Email Address</label>
-       
+      
         <div class="col-sm-9">
           <input type="text" id="firstName" placeholder="Email Address" class="form-control" autofocus>
-
+ 
         </div>
-      </div>
-
+      </div>-->
+ 
       <div class="form-group">
         
         <label for="password" class="col-sm-3 control-label">Password</label>
         
         <div class="col-sm-9">
-          <input type="password" id="password" placeholder="Password" class="form-control">
+          <input #password type="password" id="password" placeholder="Password" class="form-control">
         </div>
       </div>
-
+ 
       <div class="form-group">
         
-        <label for="password" class="col-sm-3 control-label">Confirm Password</label>
+        <label for="password" class="col-sm-3 control-label">User Name</label>
         
         <div class="col-sm-9">
-          <input type="password" id="password" placeholder=" Confirm Password" class="form-control">
+          <input #userName type="text" id="userName" placeholder=" User Name" class="form-control">
         </div>
       </div>
-
+ 
       <div class="form-group">
         <label for="password" class="col-sm-3 control-label"></label>
         <div class="col-sm-9" style="padding-left:5px">
           <!--<button type="submit" class="btn btn-primary btn-lg btn-block login-button" id="button">Submit</button>-->
-          <button class="btn btn-primary btn-lg btn-block login-button"><h3>Submit</h3></button>
+          <!--<button class="btn btn-primary btn-lg btn-block login-button" (click)="console.log('ghhj')"><h3>Submit</h3></button>-->
+          <button type="submit" class="btn btn-primary" (click)="create(email.value,name.value,password.value,userName.value);">Submit</button>
         </div>
       </div>
-
-
-
+ 
+ 
+ 
     </form>
   </div>
-</div>
-
-
-
-
+ </div>
