--- a/src/app/sign-in-popup/sign-in-popup.component.html
+++ b/src/app/sign-in-popup/sign-in-popup.component.html
@@ -14,7 +14,7 @@
     <p>Don't have an account?</p>
   </div>
   <div style="text-align: center">
-    <button class="btn btn-primary " style="width:80%"><a class ="create-account-button" routerLink="/createAccount">Create an Account</a></button>
+    <button routerLink="/createAccount" class="btn btn-primary " style="width:80%"><a class ="create-account-button" >Create an Account</a></button>
   </div>
 </div>
 
