--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,70 +17,70 @@
     </div>
 </div>-->
 
-<div class="row" id="div1" style="padding:1%">
-        <div class="col-lg-offset-4  col-lg-2">  <h3>Contact With Us:</h3> </div>
-        <div class="col-lg-6" style="display: -webkit-inline-box">
-          <div style="padding-right: 2%"><i class="fa fa-twitter" style="font-size:36px;color:#2E9AFE"></i></div>
-          <div style="padding-right: 2%"><i class="fa fa-facebook-square" style="font-size:36px;color:#0068b3"></i></div>
-          <div style="padding-right: 2%"><i class="fa fa-youtube" style="font-size:36px;color:red"></i></div>
-          <div style="padding-right: 2%"><i class="fa fa-pinterest" style="font-size:36px;color:red"></i></div>
+<div  id="div1" style="padding:1%">
+        <div class="contact-us">  <span>Contact With Us:</span> </div>
+        <div class="social-icons ">
+          <div class=" icons-div" ><i class="fa fa-twitter" style="font-size:36px;color:#2E9AFE"></i></div>
+          <div class=" icons-div" ><i class="fa fa-facebook-square" style="font-size:36px;color:#0068b3"></i></div>
+          <div class=" icons-div" ><i class="fa fa-youtube" style="font-size:36px;color:red"></i></div>
+          <div class=" icons-div" ><i class="fa fa-pinterest" style="font-size:36px;color:red"></i></div>
         </div>
     </div>
 
-<div class="row" id="div2" style="padding:2%">
-        <div class="col-lg-offset-1 col-lg-2" style="text-align:left">  
-          <h3>ABOUT THE COMPANY</h3>
+<div  id="div2">
+        <div id= "subdiv" style="text-align:left">  
+          <span>ABOUT THE COMPANY</span>
           <table>
             <tr>
-                <td> <h5>About the company</h5> </td>
+                <td> <span>About the company</span> </td>
             </tr>
             <tr>
-                <td> <h5>Advertise With Us</h5> </td>
+                <td> <span>Advertise With Us</span> </td>
             </tr>
             <tr>
-                <td> <h5>Careers</h5> </td>
+                <td> <span>Careers</span> </td>
             </tr>
             <tr>
-                <td> <h5>Community</h5> </td>
+                <td> <span>Community</span> </td>
             </tr>
             
 </table>
   </div>
 
-        <div class="col-lg-2" style="text-align:left"> 
-          <h3>COMMUNITY</h3>
+        <div id= "subdiv" style="text-align:left"> 
+          <span>COMMUNITY</span>
           <table>
             <tr>
-                <td> <h5>Sharing Courage</h5> </td>
+                <td> <span>Sharing Courage</span> </td>
             </tr>
             <tr>
-                <td> <h5>Salvation Army</h5> </td>
+                <td> <span>Salvation Army</span> </td>
             </tr>
             <tr>
-                <td> <h5>Sustainability</h5> </td>
+                <td> <span>Sustainability</span> </td>
             </tr>
             <tr>
-                <td> <h5>Community Rewards</h5> </td>
+                <td> <span>Community Rewards</span> </td>
             </tr>
             
 </table>
 </div>
 
 
-        <div class="col-lg-2" style="text-align:left">
-          <h3>CUSTOMER SERVICES</h3>
+        <div id= "subdiv" style="text-align:left">
+          <span>CUSTOMER SERVICES</span>
           <table>
             <tr>
-                <td> <h5>FAQs</h5> </td>
+                <td> <span>FAQs</span> </td>
             </tr>
             <tr>
-                <td> <h5>Account Registration</h5> </td>
+                <td> <span>Account Registration</span> </td>
             </tr>
             <tr>
-                <td> <h5>Contact Us</h5> </td>
+                <td> <span>Contact Us</span> </td>
             </tr>
             <tr>
-                <td> <h5>Customer Comments</h5> </td>
+                <td> <span>Customer Comments</span> </td>
             </tr>
             
 </table>
@@ -88,55 +88,52 @@
 
 
     
-        <div class="col-lg-2" style="text-align:left"> 
+        <div id= "subdiv"  style="text-align:left"> 
 
-            <h3>ONLINE SERVICES</h3>
+            <span>ONLINE SERVICES</span>
           <table>
             <tr>
-                <td> <h5>Digital Coupons</h5> </td>
+                <td> <span>Digital Coupons</span> </td>
             </tr>
             <tr>
-                <td> <h5>Gift Cards</h5> </td>
+                <td> <span>Gift Cards</span> </td>
             </tr>
             <tr>
-                <td> <h5>Mobile App</h5> </td>
+                <td> <span>Mobile App</span> </td>
             </tr>
             <tr>
-                <td> <h5>Receipes</h5> </td>
+                <td> <span>Receipes</span> </td>
             </tr>
             
 </table>
 </div>
-        <div class="col-lg-2" style="text-align:left"> 
-  <h3>GET THE CARD</h3>
+        <div id= "subdiv"  style="text-align:left"> 
+  <span>GET THE CARD</span>
           <table>
             <tr>
-                <td> <h5>Learn More</h5> </td>
+                <td> <span>Learn More</span> </td>
             </tr>
             <tr>
-                <td> <h5>Save On Fuel</h5> </td>
+                <td> <span>Save On Fuel</span> </td>
             </tr>
             <tr>
-                <td> <h5>Earn Free Groceries</h5> </td>
+                <td> <span>Earn Free Groceries</span> </td>
             </tr>
             <tr>
-                <td> <h5>Manage My Card</h5> </td>
+                <td> <span>Manage My Card</span> </td>
             </tr>
             
 </table>
 </div>
-<hr>
     </div>
 
 
 
 <div id="div3">
   
-  <h6>All Contents Copyright 2018 The Logo1 Co.All Rights Reserved</h6>
+  <div>All Contents Copyright 2018 The Logo1 Co.All Rights Reserved</div>
 
-<br>
-
-  <h6>If you are using a screen reader and having difficulty with this website please call 1-800-342-6663.</h6>
+  <div>If you are using a screen reader and having difficulty with this website please call 1-800-342-6663.</div>
   
 
 </div>
