--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,6 +1,7 @@
-
+<div>
 <app-header-sub-menu></app-header-sub-menu>
 <app-sign-in-popup></app-sign-in-popup>
 <app-page-carousel></app-page-carousel>
 <app-my-component-one></app-my-component-one>
+</div>
 
