ui chnages and close modal.

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -36,3 +36,9 @@ footer{
     text-align: center;
     height: auto;
 }
+
+@media only screen and (max-width: 768px) {
+    footer{
+        display: none;
+    }
+}
