--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -24,8 +24,8 @@
       <div id="modalpopup">
 
         <div class="modal-header">
-          <h1 class="edit-Product-heading modal-title">Edit Product</h1>
-          <button type="button" class="close" aria-label="Close" (click)=c>
+          <h4 class="modal-title">Edit Product</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
