--- a/src/app/sign-in-popup/sign-in-popup.component.html
+++ b/src/app/sign-in-popup/sign-in-popup.component.html
@@ -22,7 +22,7 @@
   <div id="modalpopup">
     <div class="modal-header">
       <h1 class="signIn_heading modal-title">Sign In</h1>
-      <button type="button" class="close" aria-label="Close" (click)="('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
