--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -69,7 +69,7 @@
             </div>
 
 
-            <button class="btn btn-primary" (click)="editProduct(ProductId.value,ProductTitle.value,ProductDescription.value,ProductImageUrl.value); closeModal(editProductPopup)">Edit Product</button>
+            <button class="btn btn-primary" (click)="editProduct(ProductId.value,ProductTitle.value,ProductDescription.value,ProductImageUrl.value); c('Submit')">Edit Product</button>
           </form>
 
         </div>
