--- a/src/app/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/header-sub-menu/header-sub-menu.component.css
@@ -11,7 +11,6 @@
 .menu-container-class {
     display: flex;
     justify-content: space-between;
-    padding-right: 20px;
     border-bottom: 1px solid #d8d8d8;
 }
 .StoreHeader-desktop {
@@ -78,6 +77,13 @@ svg {
 #customers tr:hover {background-color: #ddd;}
 .search-results-table{
     margin-top: 10px;
+}
+
+.header-submenu_logout_findstore {
+    display: flex;
+}
+.logout-section {
+    margin-left: 20px;
 }
 @media only screen and (max-width: 768px) {
     .StoreHeader-desktop {
