--- a/src/app/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/header-sub-menu/header-sub-menu.component.html
@@ -28,7 +28,7 @@
                
                 <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
                   <input #ZipCode type="text" placeholder="ZIP code" class="Input-input" name="ZipCode">
-                  <button type="submit" class="btn btn-primary" (click)="search(ZipCode.value);" > <span class="Button-children">Search</span></button>
+                  <button type="submit" class="btn btn-primary search-btn" (click)="search(ZipCode.value);" > <span class="Button-children">Search</span></button>
                 </form>
                 <div class="search-results-table">
                 <table id="customers">
