--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -1,5 +1,5 @@
 <div class="ProductCards row">
-  <app-add-product-popup></app-add-product-popup>
+  <app-add-product-popup (onAddProductCall)="addProductCard($event)"></app-add-product-popup>
   <div *ngFor="let ProductCard of ProductCards" class="cardHover ProductCard col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <div class="card-body ProductCard-imageBlock">
       <img src={{ProductCard.imageUrl}} class="Product-Image">
