--- a/src/app/my-component-one/my-component-one.component.html
+++ b/src/app/my-component-one/my-component-one.component.html
@@ -1,5 +1,5 @@
 <div class="ProductCards row">
-  <app-add-product-popup (onAddProductCall)="addProductCard($event)"></app-add-product-popup>
+  <app-add-product-popup *ngIf="cookieValue" (onAddProductCall)="addProductCard($event)"></app-add-product-popup>
   <div *ngFor="let ProductCard of ProductCards" class="cardHover ProductCard col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <div class="card-body ProductCard-imageBlock">
       <img src={{ProductCard.imageUrl}} class="Product-Image">
@@ -14,9 +14,11 @@
 
     </div>
     <div class="ProductCard-buttonsBlock row">
-      <button class="btn btn-primary EditButton col-xs-6" (click)=editProductCard(ProductCard,editProductPopup)>Edit</button>
+      <button *ngIf="cookieValue" class="btn btn-primary EditButton col-xs-6" (click)=editProductCard(ProductCard,editProductPopup)>Edit</button>
       &nbsp;
-      <button class="btn btn-outline-danger DeleteButton col-xs-6" (click)=deleteProductCard(ProductCard)>Delete</button>
+      <button *ngIf="cookieValue" class="btn btn-outline-danger DeleteButton col-xs-6" (click)=deleteProductCard(ProductCard)>Delete</button>
+      <button *ngIf="!cookieValue" class="btn btn-primary signInButton col-xs-6">Sign In to continue</button>
+      &nbsp;
     </div>
 
 
