--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,10 @@ border-left: 5px solid #de2f2f;
 {
     width: 48.5%;
 }
+.signInButton
+{
+    width: 97%;
+}
 .ProductCard-buttonsBlock
 {
     bottom: 0rem;
