--- a/src/app/sign-in-button/sign-in-button.component.html
+++ b/src/app/sign-in-button/sign-in-button.component.html
@@ -17,16 +17,19 @@
       <div style="margin-bottom:2%">
         <span>Sign in to your existing account</span>
       </div>
-      <form action="#">
+      <form action="#" #signInForm="ngForm" >
         <div class="form-group">
-          <label for="email"><b>Email Address</b></label>
-          <input #userID type="text" class="form-control col-md-12 col-lg-12" id="userID" placeholder="Enter UserID" name="userID">
+          <label for="text"><b>UserId</b></label>
+          <input #userID type="text" class="form-control col-md-12 col-lg-12" id="userID" placeholder="Enter UserID" name="userID" required>
         </div>
         <div class="form-group">
           <label for="pwd"><b>Password</b></label>
-          <input #password type="password" class="form-control col-md-12 col-lg-12" id="pwd" placeholder="Enter password" name="pwd">
+          <input #password type="password" class="form-control col-md-12 col-lg-12" id="pwd" placeholder="Enter password" name="pwd" required>
         </div>
-        <button type="submit" class="btn btn-primary" (click)="auth(userID.value, password.value);c();">Sign In</button>
+        <div>
+          <p class="SignInPopupErrorMessage">{{errorMessage}}</p>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="signInForm.invalid" (click)="auth(userID.value, password.value);">Sign In</button>
       </form>
     </div>
   </div>
