--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,10 @@ border-left: 5px solid #de2f2f;
     cursor: pointer;
 }
 
+.ContainerGrid-header-container {
+margin: 1rem;
+color: #007bff;
+font-size: 20px;
+font-family: sans-serif;
+}
+
